# ecg-recoverability

./: .gitignore  README.md  env.lock.txt  pyproject.toml  scratchpad_arxiv_bundle.md  scratchpad_audit.md
arc_audit/: ARC_STATUS.md  STAGE_GATES.md  acpx_version.txt  arc_doctor.txt  arc_probe_status.v1.json  arc_version.txt  config.arc.yaml  pipeline_summary.json  reviews.md  verified_registry.v1.json
config/: README.md  ecgrecover.integration.v3.json  ecgrecover.upstream.v1.json
docs/: research_protocol.md
environments/: README.md  cpu.in  cpu.lock.txt  gpu.in  gpu.lock.txt
experiments/: ablation_figures.py  active_selection.py  baselines_physics.py  certificate_floor_diffusion.py  certificate_validation.py  certificate_validation_figure.py  cross_dataset.py  cross_device.py  delineator_robustness.py  diagnostic_subgroup_v3.py  external_validation_v3.py  fabrication_audit.py  fabrication_audit_diffusion.py  fabrication_figure.py  fair_baselines.py  gpu_diffusion_clean.py  gpu_diffusion_figure.py  gpu_fabrication.py  lead_weighting.py  maps_figure.py  meta_analysis_v3.py  neural_baseline.py  neural_baselines.py  paper_figures_v3.py  protocol.py  ptbxl_reduced_lead.py  ptbxl_stemi_safety.py  realism_metrics.py  reconstruction_benchmark_v3.py  reconstruction_candidates_v3.py  recoverability_maps.py  robust_maps_v3.py  run_all.py  st_safety.py  stage_gates_v3.py  synthetic_dipole_injection.py  tier2_conformal.py  transfer_bound.py  tune_reconstructors_v3.py
paper/: _cross_macros.tex  _gpu_ci_macros.tex  _gpu_macros.tex  arxiv_long.tex  author_declaration.v1.template.json  check_submission_claims.py  citation_status.yaml  compliance.tex  emit_baseline_table.py  emit_long_results.py  main.tex  main_v2.tex  p4.txt  p5.txt  refs.bib  results_gpu.tex  results_long_crossdata.tex  results_long_generative.tex  results_neural.tex  results_ptbxl.tex  results_stemi.tex  results_synthetic.tex  results_v2_baseline.tex  results_v2_calib.tex  results_v2_maps.tex  theorem_corrected.tex  theorem_floor.tex  theorem_transfer.tex  tool_provenance.v1.template.json  venue_policy.v1.template.json
results/: active_selection.json  baselines_physics.json  certificate_floor_diffusion.json  certificate_validation.json  cross_dataset.json  cross_device.json  delineator_robustness.json  fabrication_audit.json  fabrication_diffusion.json  fair_baselines.json  gpu_deficit_ci.json  gpu_diffusion.json  gpu_diffusion_leakfixed.json  gpu_oracle_gate.json  lead_weighting.json  neural_baseline.json  neural_baselines.json  precheck_dipolarity.json  ptbxl_reduced_lead.json  ptbxl_stemi.json  realism_metrics.json  recoverability_maps.json  st_safety.json  st_safety_cwt100.json  st_safety_dwt100.json  (+4 more)
(+177 files in other folders)
