[project]
name = "ecg-recoverability"
version = "0.1.0"
description = "Certified Reduced-Lead ECG Reconstruction: a per-feature recoverability certificate with distribution-free calibration"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "wfdb>=4.1",
    "neurokit2>=0.2.7",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecgcert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
