[project]
name = "ecg-recoverability"
version = "0.1.0"
description = "Robust target-specific, model-conditional recoverability maps for reduced-lead ECG reconstruction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=17.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "wfdb==4.1.2",
    "neurokit2==0.2.12",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pypdf>=5.1",
    "cryptography>=43.0",
]

[project.optional-dependencies]
torch = ["torch==2.8.0"]
remote = ["paramiko>=3.5"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecgcert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
